Implemented data file preferences and loading from file
* Added new command "load". Calling the command will bring up the system
file picker which allows the user to choose a specific folder and name
their data file anything they want. Their choice will be remembered in
Java preferences and also become the new data file
* Added showChangeDataFilePathDialog() to Logic component which can be
used by all CommandHandlers
* Cleaned up the code in Storage component and shifted multiple Task
objects parsing and toString into Task code
* Updated and passed all Storage tests
* Added toString(ArrayList<Task>) to Task class to convert a list of
Task objects to a concatenated string with blank line separators
* Changed the line breaks to \r\n for Windows compatibility
* Added parseTasks(String) to TaskInterface to parse a blank line
separated string of Task objects into a list of Task objects
* Closes #56
* Closes #137